--- a/file.manager/src/main/resources/template/##package##/controller/##className##Controller.java.vm
+++ b/file.manager/src/main/resources/template/##package##/controller/##className##Controller.java.vm
@@ -42,7 +42,7 @@ public class ##className##Controller {
 	 */
 	@GetMapping("/detail")
 	@ApiOperationSupport(order = 1)
-	@Operation(summary = "##className## 详情")
+	@Operation(summary = "##tableComment## 详情")
 	public R<##className##Vo> detail(##className##Ro.Query body) {
 		##className##Vo ##varClassName## = ModelWrapper.parseOne(
 				this.##varClassName##Service.getOne(
@@ -59,7 +59,7 @@ public class ##className##Controller {
 	 */
 	@PostMapping("/list")
 	@ApiOperationSupport(order = 2)
-	@Operation(summary = "##className## 分页")
+	@Operation(summary = "##tableComment## 分页")
 	public R<IPage<##className##Vo>> list(@RequestBody ##className##Ro.Query body) {
 		LambdaQueryWrapper<##className##> wrapper = Wrappers.<##className##>lambdaQuery();
 		IPage<##className##> pages = ##varClassName##Service.page(Condition.getPage(body), wrapper);
@@ -71,7 +71,7 @@ public class ##className##Controller {
 	 */
 	@PostMapping("/save")
 	@ApiOperationSupport(order = 4)
-	@Operation(summary = "##className## 新增")
+	@Operation(summary = "##tableComment## 新增")
 	public R<Boolean> save(@Valid @RequestBody ##className##Ro.Submit body) {
 		return R.success(##varClassName##Service.save(ModelWrapper.parseOne(body, ##className##.class)));
 	}
@@ -81,7 +81,7 @@ public class ##className##Controller {
 	 */
 	@PostMapping("/update")
 	@ApiOperationSupport(order = 5)
-	@Operation(summary = "##className## 修改")
+	@Operation(summary = "##tableComment## 修改")
 	public R<Boolean> update(@RequestBody ##className##Ro.Submit body) {
 		return R.success(##varClassName##Service.updateById(ModelWrapper.parseOne(body, ##className##.class)));
 	}
@@ -91,7 +91,7 @@ public class ##className##Controller {
 	 */
 	@PostMapping("/submit")
 	@ApiOperationSupport(order = 6)
-	@Operation(summary = "##className## 新增或修改")
+	@Operation(summary = "##tableComment## 新增或修改")
 	public R<Boolean> submit(@Valid @RequestBody ##className##Ro.Submit body) {
 		return R.success(##varClassName##Service.saveOrUpdate(ModelWrapper.parseOne(body, ##className##.class)));
 	}
@@ -101,7 +101,7 @@ public class ##className##Controller {
 	 */
 	@GetMapping("/remove")
 	@ApiOperationSupport(order = 7)
-	@Operation(summary = "##className## 逻辑删除")
+	@Operation(summary = "##tableComment## 逻辑删除")
 	public R remove(@Parameter(description = "主键集合", required = true) @RequestParam String ids) {
 		return R.success(##varClassName##Service.deleteLogic(ValueUtils.toLongList(ids)));
 	}
